- Misc fixes:
  - Fix: WinUAE CPU core (FPU) memory state restore
  - Fix: chrash with VDI extended resolution emulation when
         C: isn't GEMDOS HD emulated drive
  - Fix: compilation when zlib is missing
- Additional TOS run-time patching:
  - Support fast boot also with TOS v3 & v4
  - Support 32-bit addressing also with TOS v4
  - Replace TOS v4 instructions unsupported on 060
- Options:
  - Fast boot (warm boot / memory check bypass) is disabled by default
  - 68060 CPU level and --ttram support with new WinUAE CPU core
  - New --png-level option to decrease AVI compression load
- Hard drive emulation:
  - SDL GUI & cmdline option to skip drives used by partitions on
    ACSI & IDE images when assigning drive for GEMDOS HD emulation.
    Partition count parsed by Hatari might not match count used by
    Atari HD driver due to driver differences in interpreting disk MBR
  - Refuse to mount same HD image from multiple Hatari instances
    (on platforms supporting BSD flock()), to avoid corrupting them
- SDL GUI:
  - joystick navigation in options GUI
  - keyboard navigation & shortcuts in options GUI
  - sort file selector items case-insensitively with folders first
  - Partial support for showing Latin1 chars from UTF-8 file names
  - AltGr+F<1-4> keyboard shortcuts to switch mode/type for emulated
    joysticks and joypads
  - Fix: sync joystick changes with statusbar
  - Fix: update default max window size for 2-line statusbar
         NOTE: size would need to be updated in Hatari config files too!
  - Fix: statusbar assert when FPU/MMU/TT-RAM are enabled in WinUAE CPU core
- Debugger:
  - Fix: crash when GEMDOS tracing is used without GEMDOS HD emulation
  - Fix: update external disassembler's CPU mask when CPU type is changed
         (it wasn't restricted to opcodes valid for given CPU type)
  - Add trace support for IDE, MIDI and keymaps.  ACSI (SCSI) and IDE
    trace output shows primary partition tables for ACSI & IDE images