@@ -45,6 +45,7 @@ Emulator:
   - Support fast boot also with TOS v3 & v4
   - Support 32-bit addressing also with TOS v4
   - Replace TOS v4 instructions unsupported on 060
+  - memtop is aligned to 32k (with VDI mode), to get TT-ram detected
 - Options:
   - Fast boot (warm boot / memory check bypass) is disabled by default
   - 68060 CPU level and --ttram support with new WinUAE CPU core
